2002-03-26  Alexander Dupuy  <dupuy@sysdetect.com>

	* test/Makefile (BK_SIMPLE_INTERNALPROGS): support "make test_fun"

	* test/test_config.c (main): bk_general_debug_config obviates
	bk_debug_setconfig

	* test/test_getbyfoo.c (main): bk_general_debug_config obviates
	bk_debug_setconfig

	* test/test_time.c (main): use BK_RETURN to keep Insure happy

	* test/test_bio.c, test/test_config.c, test/test_errorstuff.c:
	* test/test_fun.c, test/test_getbyfoo.c, test/test_ioh.c:
	* test/test_locks.c, test/test_stringconv.c, test/test_time.c:
	* test/test_url.c, test/testhashspeed.c:
	* test/testrandidea.c: use LOG_USER, not BK_ERR or LOG_LOCAL0
	
2002-03-19  James Tanis  <jtt@saint.sysdetect.com>

	* include/libbk.h (BK_USECTONSEC): Convert usecs <=> nsecs.

2002-03-19  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk_oscompat.h (_PATH_DEVNULL): if not defined in unistd.h
	(BK_RHS): force compile error when using ?: or , expression as lvalue

2002-03-19  Seth Robertson  <seth@yeah.baka.org>

	* lib/b_listnum.c: List of linked list heads.  Data structures for
	fixed expiry queues with large numbers of members that get deleted
	and reinserted a lot.

2002-03-18  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_exec.c (bk_pipe_to_exec): Toss stderr if user requests.

2002-03-18  Alexander Dupuy  <dupuy@sysdetect.com>

	* test/Makefile (BK_SIMPLE_INTERNALPROGS): build test_fun with
	funky path to test path stripping

	* test/test_fun.c: simple tests for bk_fun

2002-03-14  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_exec.c (bk_exec): use execvp where possible
	(bk_search_path): the most broken code I have seen in a long time
	- it didn't even come close to working [but was surely faster to write
	than something using g_spawn_async_with_pipes :-]

	* lib/b_url.c (bk_url_unescape): define in terms of bk_url_unescape_len
	(bk_url_unescape_len): this is the more fundamental variant
	(bk_url_getparam): allow alternate delimiters, case-independent tokens,